architecture-ide/tests/fixtures/negative/loader/bad_concept/concepts/Broken.concept
this is not a concept at all
!@#$%^&*
